[gd_scene load_steps=2 format=3 uid="uid://b7nan5k2pxq3c"]

[ext_resource type="Script" path="res://scripts/ui/ship_info_panel.gd" id="1"]

[node name="ShipInfoPanel" type="PanelContainer"]
offset_right = 250.0
offset_bottom = 200.0
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ShipName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Ship Name"
horizontal_alignment = 1

[node name="ShipClass" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Class"
horizontal_alignment = 1

[node name="Stats" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HullLabel" type="Label" parent="MarginContainer/VBoxContainer/Stats"]
layout_mode = 2
text = "Hull: 100/100"

[node name="ShieldsLabel" type="Label" parent="MarginContainer/VBoxContainer/Stats"]
layout_mode = 2
text = "Shields: 50/50"

[node name="EnergyLabel" type="Label" parent="MarginContainer/VBoxContainer/Stats"]
layout_mode = 2
text = "Energy: 10/10"

[node name="APLabel" type="Label" parent="MarginContainer/VBoxContainer/Stats"]
layout_mode = 2
text = "AP: 4/4"

[node name="Bars" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HullBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/Bars"]
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="ShieldsBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/Bars"]
layout_mode = 2
max_value = 50.0
value = 50.0
show_percentage = false

[node name="EnergyBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/Bars"]
layout_mode = 2
max_value = 10.0
value = 10.0
show_percentage = false
